--- a/src/style.css
+++ b/src/style.css
@@ -79,10 +79,14 @@ ul {
   grid-auto-flow: column;
   justify-content: start;
   gap: 0.5rem;
+
 }
 .previous-item-price {
   text-decoration: line-through;
   color: #7a859b;
+}
+.discounted-item-price{
+  color: red
 }
 .shopping-item {
   display: grid;
