--- a/src/style.css
+++ b/src/style.css
@@ -171,6 +171,7 @@ img {
   right: 10px;
   /* font-size: 1.5rem; */
   color: #1c2e54;
+  cursor: pointer;
 }
 .search-modal__title {
   color: #1c2e54;
